Update Firebase hosting workflow to trigger on main branch instead of develop-v2

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -3,7 +3,7 @@ name: Build and Deploy to Development
 on:
   push:
     branches:
-      - develop-v2
+      - main
     paths-ignore:
       - "README.md"
       - ".env.example"
