--- a/package.json
+++ b/package.json
@@ -6,12 +6,54 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "generate": "node orval-create.cjs && orval --config ./orval.config.cjs",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/montserrat": "^5.0.18",
+    "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/x-data-grid": "^7.6.1",
+    "@mui/x-data-grid-generator": "^7.6.1",
+    "@mui/x-date-pickers": "^5.0.20",
+    "@tanstack/react-query": "^5.39.0",
+    "@tanstack/react-query-devtools": "^5.39.0",
+    "@types/moment": "^2.13.0",
+    "apexcharts": "^3.49.2",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "localforage": "^1.10.0",
+    "lottie-web": "^5.12.2",
+    "match-sorter": "^6.3.4",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
+    "react-apexcharts": "^1.4.1",
+    "react-error-boundary": "^4.0.13",
+    "react-icons": "^5.2.1",
+    "react-modern-calendar-datepicker": "^3.1.6",
+    "react-phone-number-input": "^3.4.3",
+    "react-razorpay": "^2.0.1",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
+    "sort-by": "^1.2.0",
+    "styled-components": "^6.1.11",
+    "suneditor": "^2.46.2",
+    "suneditor-react": "^3.6.1",
+    "usehooks-ts": "^3.1.0",
+    "yup": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -24,6 +66,12 @@
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "eslint-plugin-react": "^7.34.1",
+    "orval": "^6.29.1",
+    "prettier": "3.2.5",
+    "simple-zustand-devtools": "^1.1.0"
   }
 }
