--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-google-places-autocomplete": "^4.1.0",
     "react-icons": "^5.2.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-phone-number-input": "^3.4.3",
